# iris-agentic-dev

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml  skill-regression.yml
crates/iris-agentic-dev-bin/: Cargo.toml
crates/iris-agentic-dev-bin/src/: lib.rs  main.rs
crates/iris-agentic-dev-bin/src/cmd/: compile.rs  connection_args.rs  doc.rs  exec.rs  mod.rs  query.rs  tool.rs  tsv.rs
crates/iris-agentic-dev-bin/tests/: plugin_dispatch_tests.rs
crates/iris-agentic-dev-bin/tests/integration/: test_compile_live.rs  test_doc_live.rs  test_exec_live.rs  test_query_live.rs  test_tool_live.rs
crates/iris-agentic-dev-bin/tests/unit/: test_compile_args.rs  test_connection_args.rs  test_doc_args.rs  test_exec_args.rs  test_query_tsv.rs  test_tool_dispatch.rs  test_tsv.rs
crates/iris-agentic-dev-core/src/iris/: connection.rs  server_manager.rs
crates/iris-agentic-dev-core/tests/: admin_e2e_tests.rs  discovery_tests.rs  docker_discovery_e2e.rs  log_store_tests.rs
docs/: connecting.md  skills.md  tools.md  troubleshooting.md
light-skills/skills/ensemble-production/: SKILL.md
skills/iris-coverage-run/: SKILL.md
skills/iris-coverage-setup/: SKILL.md
skills/pyprod/: SKILL.md
skills/pyprod/references/: production-definition.md
specs/061-official-skill-pack/: spec.md
specs/061-official-skill-pack/checklists/: requirements.md
specs/062-mcp-editor-integration-e2e/: spec.md
specs/062-mcp-editor-integration-e2e/checklists/: requirements.md
specs/063-cli-tool-shortcuts/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/063-cli-tool-shortcuts/checklists/: requirements.md
specs/063-cli-tool-shortcuts/contracts/: cli.md
specs/064-objectscript-coverage/: spec.md
tests/e2e/skill_eval/: evaluator.py  lift.py
(+41 files in other folders)
